--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d1d498",
+   "id": "c95ce391",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,54 +11,75 @@
     "import shutil\n",
     "import pandas as pd\n",
     "from openpyxl import load_workbook\n",
-    "from openpyxl.styles import PatternFill, Font\n",
+    "from openpyxl.styles import Font, PatternFill\n",
     "\n",
-    "def update_excel_with_copy(input_file, dfs_to_update: dict):\n",
+    "def update_excel_with_copy(input_file, dfs_to_update, output_folder=\"Output\"):\n",
     "    \"\"\"\n",
-    "    input_file : str → path to original workbook\n",
-    "    dfs_to_update : dict {sheet_name: dataframe} — sheets to replace or add\n",
+    "    Create a copy of the input Excel file in the Output folder with '_output' added to its name.\n",
+    "    Replace existing sheets with DataFrames or add new ones if they don't exist.\n",
+    "    Apply formatting (header bold, blue fill, column width, filters).\n",
+    "    \n",
+    "    Parameters:\n",
+    "        input_file (str): Full path to the Excel file selected by the user.\n",
+    "        dfs_to_update (dict): Dictionary {sheet_name: DataFrame} to update/replace/add.\n",
+    "        output_folder (str): Folder where the output file will be saved (default 'Output').\n",
     "    \"\"\"\n",
+    "    # 1. Ensure output folder exists\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "    # 1. Create copy with \"_output\"\n",
-    "    base, ext = os.path.splitext(input_file)\n",
-    "    output_file = f\"{base}_output{ext}\"\n",
-    "    shutil.copy(input_file, output_file)\n",
+    "    # 2. Extract filename and create output path\n",
+    "    base_name = os.path.basename(input_file)\n",
+    "    name, ext = os.path.splitext(base_name)\n",
+    "    output_file = os.path.join(output_folder, f\"{name}_output{ext}\")\n",
     "\n",
-    "    # 2. Load the copy\n",
+    "    # 3. Copy the file\n",
+    "    shutil.copy2(input_file, output_file)\n",
+    "\n",
+    "    # 4. Open the workbook\n",
     "    book = load_workbook(output_file)\n",
-    "    writer = pd.ExcelWriter(output_file, engine=\"openpyxl\")\n",
-    "    writer.book = book\n",
-    "    writer.sheets = {ws.title: ws for ws in book.worksheets}\n",
     "\n",
-    "    # 3. Replace/add selected sheets\n",
-    "    for sheet_name, df in dfs_to_update.items():\n",
-    "        if sheet_name in writer.sheets:\n",
-    "            # remove existing sheet\n",
-    "            std = writer.book[sheet_name]\n",
-    "            writer.book.remove(std)\n",
-    "        # create new sheet and write\n",
-    "        df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "    # 5. Remove sheets that need replacing\n",
+    "    for sheet_name in dfs_to_update.keys():\n",
+    "        if sheet_name in book.sheetnames:\n",
+    "            del book[sheet_name]\n",
     "\n",
-    "        # formatting\n",
-    "        ws = writer.book[sheet_name]\n",
-    "        for cell in ws[1]:  # header row\n",
-    "            cell.font = Font(bold=True)\n",
-    "            cell.fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
-    "        ws.auto_filter.ref = ws.dimensions\n",
+    "    # 6. Write updated/new DataFrames\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\", mode=\"a\") as writer:\n",
+    "        writer.book = book\n",
+    "        writer.sheets = {ws.title: ws for ws in book.worksheets}\n",
+    "        for sheet_name, df in dfs_to_update.items():\n",
+    "            df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "\n",
+    "    # 7. Re-open to apply formatting\n",
+    "    book = load_workbook(output_file)\n",
+    "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")  # Light Blue\n",
+    "    header_font = Font(bold=True)\n",
+    "\n",
+    "    for sheet_name in dfs_to_update.keys():\n",
+    "        ws = book[sheet_name]\n",
+    "\n",
+    "        # Apply header formatting\n",
+    "        for cell in ws[1]:\n",
+    "            cell.font = header_font\n",
+    "            cell.fill = header_fill\n",
+    "\n",
+    "        # Set column width = 25\n",
     "        for col in ws.columns:\n",
     "            col_letter = col[0].column_letter\n",
     "            ws.column_dimensions[col_letter].width = 25\n",
     "\n",
-    "    # 4. Save\n",
-    "    writer.close()\n",
+    "        # Add autofilter\n",
+    "        ws.auto_filter.ref = ws.dimensions\n",
     "\n",
-    "    print(f\"✅ Updated workbook saved as: {output_file}\")\n"
+    "    # Save final\n",
+    "    book.save(output_file)\n",
+    "    print(f\"✅ File saved with formatting to: {output_file}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb909ba",
+   "id": "a6366f75",
    "metadata": {},
    "outputs": [],
    "source": [
