--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c95ce391",
+   "id": "3695bf40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,6 @@
     "    Create a copy of the input Excel file in the Output folder with '_output' added to its name.\n",
     "    Replace existing sheets with DataFrames or add new ones if they don't exist.\n",
     "    Apply formatting (header bold, blue fill, column width, filters).\n",
-    "    \n",
-    "    Parameters:\n",
-    "        input_file (str): Full path to the Excel file selected by the user.\n",
-    "        dfs_to_update (dict): Dictionary {sheet_name: DataFrame} to update/replace/add.\n",
-    "        output_folder (str): Folder where the output file will be saved (default 'Output').\n",
     "    \"\"\"\n",
     "    # 1. Ensure output folder exists\n",
     "    os.makedirs(output_folder, exist_ok=True)\n",
@@ -35,7 +30,7 @@
     "    # 3. Copy the file\n",
     "    shutil.copy2(input_file, output_file)\n",
     "\n",
-    "    # 4. Open the workbook\n",
+    "    # 4. Load workbook\n",
     "    book = load_workbook(output_file)\n",
     "\n",
     "    # 5. Remove sheets that need replacing\n",
@@ -44,9 +39,8 @@
     "            del book[sheet_name]\n",
     "\n",
     "    # 6. Write updated/new DataFrames\n",
-    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\", mode=\"a\") as writer:\n",
-    "        writer.book = book\n",
-    "        writer.sheets = {ws.title: ws for ws in book.worksheets}\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\", mode=\"a\", if_sheet_exists=\"replace\") as writer:\n",
+    "        writer._book = book   # internal hook, safe in practice\n",
     "        for sheet_name, df in dfs_to_update.items():\n",
     "            df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
     "\n",
@@ -79,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6366f75",
+   "id": "35f07f72",
    "metadata": {},
    "outputs": [],
    "source": [
