--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,200 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7f379a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# -------------------------\n",
+    "# Phase 1: Enrichment\n",
+    "# -------------------------\n",
+    "def phase1_enrich(monthly_file, gha_file, output_file=\"phase1_enriched.xlsx\"):\n",
+    "    # Read files\n",
+    "    monthly_df = pd.read_csv(monthly_file)\n",
+    "    gha_df = pd.read_excel(gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "\n",
+    "    # Clean column names\n",
+    "    monthly_df.columns = monthly_df.columns.str.strip()\n",
+    "    gha_df.columns = gha_df.columns.str.strip()\n",
+    "\n",
+    "    # Select needed GHA columns\n",
+    "    gha_keep = [\n",
+    "        \"Employee ID\",\n",
+    "        \"Employee Name\",\n",
+    "        \"Employee Business Email Address\",\n",
+    "        \"Global Career Band\",\n",
+    "        \"Legal Entity\"\n",
+    "    ]\n",
+    "    gha_df = gha_df[gha_keep]\n",
+    "\n",
+    "    # Merge\n",
+    "    merged_df = monthly_df.merge(\n",
+    "        gha_df,\n",
+    "        on=\"Employee ID\",\n",
+    "        how=\"left\",\n",
+    "        suffixes=(\"\", \"_GHA\")\n",
+    "    )\n",
+    "\n",
+    "    # Capture missing matches\n",
+    "    missing = merged_df[merged_df[\"Global Career Band\"].isna()]\n",
+    "\n",
+    "    # Save\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        merged_df.to_excel(writer, index=False, sheet_name=\"Enriched\")\n",
+    "        if not missing.empty:\n",
+    "            missing.to_excel(writer, index=False, sheet_name=\"Missing in GHA\")\n",
+    "\n",
+    "    print(f\"✅ Phase 1 done. Saved to {output_file}\")\n",
+    "    return merged_df\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# Phase 2: Flattened Hierarchy\n",
+    "# -------------------------\n",
+    "def phase2_hierarchy(enriched_df, output_file=\"phase2_hierarchy.xlsx\"):\n",
+    "    ID_COL = \"Employee ID\"\n",
+    "    NAME_COL = \"Employee Name\"\n",
+    "    EMAIL_COL = \"Employee Business Email Address\"\n",
+    "    MGR_ID_COL = \"Manager Employee ID\"\n",
+    "    GCB_COL = \"Global Career Band\"\n",
+    "\n",
+    "    # Lookup for employees\n",
+    "    df_lookup = enriched_df.set_index(ID_COL)\n",
+    "\n",
+    "    final_rows = []\n",
+    "    exceptions = []\n",
+    "\n",
+    "    def get_emp(emp_id):\n",
+    "        try:\n",
+    "            return df_lookup.loc[emp_id]\n",
+    "        except KeyError:\n",
+    "            return None\n",
+    "\n",
+    "    # Find all MDs\n",
+    "    mds = enriched_df[enriched_df[GCB_COL] == \"MD\"]\n",
+    "\n",
+    "    # Process each MD\n",
+    "    for _, md in mds.iterrows():\n",
+    "        md_id = md[ID_COL]\n",
+    "\n",
+    "        # Find GCB3s under MD\n",
+    "        gcb3s = enriched_df[(enriched_df[MGR_ID_COL] == md_id) & (enriched_df[GCB_COL] == 3)]\n",
+    "\n",
+    "        if gcb3s.empty:\n",
+    "            # Employees directly under MD\n",
+    "            direct_emps = enriched_df[(enriched_df[MGR_ID_COL] == md_id) & (enriched_df[GCB_COL] != 3)]\n",
+    "            for _, emp in direct_emps.iterrows():\n",
+    "                final_rows.append({\n",
+    "                    \"MD Name\": md[NAME_COL],\n",
+    "                    \"MD ID\": md[ID_COL],\n",
+    "                    \"MD Email\": md[EMAIL_COL],\n",
+    "                    \"GCB3 Name\": \"\",\n",
+    "                    \"GCB3 ID\": \"\",\n",
+    "                    \"GCB3 Email\": \"\",\n",
+    "                    \"Reporting Manager Name\": \"\",\n",
+    "                    \"Reporting Manager ID\": \"\",\n",
+    "                    \"Reporting Manager Email\": \"\",\n",
+    "                    **emp.to_dict()\n",
+    "                })\n",
+    "            continue\n",
+    "\n",
+    "        for _, gcb3 in gcb3s.iterrows():\n",
+    "            gcb3_id = gcb3[ID_COL]\n",
+    "\n",
+    "            # GCB3’s own row\n",
+    "            final_rows.append({\n",
+    "                \"MD Name\": md[NAME_COL],\n",
+    "                \"MD ID\": md[ID_COL],\n",
+    "                \"MD Email\": md[EMAIL_COL],\n",
+    "                \"GCB3 Name\": gcb3[NAME_COL],\n",
+    "                \"GCB3 ID\": gcb3[ID_COL],\n",
+    "                \"GCB3 Email\": gcb3[EMAIL_COL],\n",
+    "                \"Reporting Manager Name\": \"\",\n",
+    "                \"Reporting Manager ID\": \"\",\n",
+    "                \"Reporting Manager Email\": \"\",\n",
+    "                **gcb3.to_dict()\n",
+    "            })\n",
+    "\n",
+    "            # Managers (GCB3/4) under this GCB3\n",
+    "            rm_level = enriched_df[enriched_df[MGR_ID_COL] == gcb3_id]\n",
+    "            for _, rm in rm_level.iterrows():\n",
+    "                rm_id = rm[ID_COL]\n",
+    "\n",
+    "                final_rows.append({\n",
+    "                    \"MD Name\": md[NAME_COL],\n",
+    "                    \"MD ID\": md[ID_COL],\n",
+    "                    \"MD Email\": md[EMAIL_COL],\n",
+    "                    \"GCB3 Name\": gcb3[NAME_COL],\n",
+    "                    \"GCB3 ID\": gcb3[ID_COL],\n",
+    "                    \"GCB3 Email\": gcb3[EMAIL_COL],\n",
+    "                    \"Reporting Manager Name\": rm[NAME_COL],\n",
+    "                    \"Reporting Manager ID\": rm[ID_COL],\n",
+    "                    \"Reporting Manager Email\": rm[EMAIL_COL],\n",
+    "                    **rm.to_dict()\n",
+    "                })\n",
+    "\n",
+    "                # Employees under this RM\n",
+    "                emps = enriched_df[enriched_df[MGR_ID_COL] == rm_id]\n",
+    "                for _, emp in emps.iterrows():\n",
+    "                    final_rows.append({\n",
+    "                        \"MD Name\": md[NAME_COL],\n",
+    "                        \"MD ID\": md[ID_COL],\n",
+    "                        \"MD Email\": md[EMAIL_COL],\n",
+    "                        \"GCB3 Name\": gcb3[NAME_COL],\n",
+    "                        \"GCB3 ID\": gcb3[ID_COL],\n",
+    "                        \"GCB3 Email\": gcb3[EMAIL_COL],\n",
+    "                        \"Reporting Manager Name\": rm[NAME_COL],\n",
+    "                        \"Reporting Manager ID\": rm[ID_COL],\n",
+    "                        \"Reporting Manager Email\": rm[EMAIL_COL],\n",
+    "                        **emp.to_dict()\n",
+    "                    })\n",
+    "\n",
+    "    # Exceptions: employees with missing managers (but not MDs)\n",
+    "    all_emp_ids = set(enriched_df[ID_COL])\n",
+    "    all_mgr_ids = set(enriched_df[MGR_ID_COL])\n",
+    "    missing_mgr_ids = all_mgr_ids - all_emp_ids\n",
+    "\n",
+    "    for _, emp in enriched_df[enriched_df[MGR_ID_COL].isin(missing_mgr_ids)].iterrows():\n",
+    "        if emp[GCB_COL] != \"MD\":\n",
+    "            exceptions.append(emp.to_dict())\n",
+    "\n",
+    "    # Convert to DataFrames\n",
+    "    final_df = pd.DataFrame(final_rows)\n",
+    "    exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "    # Sorting\n",
+    "    final_df.sort_values(\n",
+    "        by=[\"MD Name\", \"GCB3 Name\", \"Reporting Manager Name\", NAME_COL],\n",
+    "        inplace=True,\n",
+    "        na_position=\"last\"\n",
+    "    )\n",
+    "\n",
+    "    # Save\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        final_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "    print(f\"✅ Phase 2 done. Flattened hierarchy saved to {output_file}\")\n",
+    "    return final_df, exceptions_df\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# Run pipeline\n",
+    "# -------------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    monthly_file = \"monthly.csv\"\n",
+    "    gha_file = \"gha.xlsx\"\n",
+    "\n",
+    "    enriched = phase1_enrich(monthly_file, gha_file)\n",
+    "    phase2_hierarchy(enriched)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "773121e8",
    "metadata": {},
    "outputs": [],
