--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3695bf40",
+   "id": "31e1b595",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "from openpyxl.styles import Font, PatternFill\n",
+    "\n",
+    "def update_excel_with_copy(input_file, dfs_to_update, output_folder=\"Output\"):\n",
+    "    \"\"\"\n",
+    "    Copy input_file -> output_folder/<name>_output.xlsx,\n",
+    "    then replace/add sheets from dfs_to_update (dict: sheet_name -> DataFrame),\n",
+    "    apply header formatting, set column widths, apply autofilter, freeze header.\n",
+    "    \"\"\"\n",
+    "    # 1) prepare output path\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "    base_name = os.path.basename(input_file)\n",
+    "    name, ext = os.path.splitext(base_name)\n",
+    "    output_file = os.path.join(output_folder, f\"{name}_output{ext}\")\n",
+    "\n",
+    "    # 2) copy input -> output (overwrites existing copy)\n",
+    "    shutil.copy2(input_file, output_file)\n",
+    "\n",
+    "    # 3) load workbook with openpyxl\n",
+    "    wb = load_workbook(output_file)\n",
+    "\n",
+    "    # 4) for each sheet to update: remove if exists, then create and write DF\n",
+    "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")  # light blue\n",
+    "    header_font = Font(bold=True)\n",
+    "\n",
+    "    for sheet_name, df in dfs_to_update.items():\n",
+    "        # remove existing sheet if present\n",
+    "        if sheet_name in wb.sheetnames:\n",
+    "            ws_old = wb[sheet_name]\n",
+    "            wb.remove(ws_old)\n",
+    "\n",
+    "        # create sheet at the end\n",
+    "        ws = wb.create_sheet(title=sheet_name)\n",
+    "\n",
+    "        # write dataframe rows (includes header)\n",
+    "        for r in dataframe_to_rows(df, index=False, header=True):\n",
+    "            ws.append(r)\n",
+    "\n",
+    "        # formatting header row (row 1)\n",
+    "        # (we assume header exists since header=True above)\n",
+    "        for cell in ws[1]:\n",
+    "            cell.font = header_font\n",
+    "            cell.fill = header_fill\n",
+    "\n",
+    "        # set all column widths to 25\n",
+    "        for col_cells in ws.columns:\n",
+    "            if not col_cells:\n",
+    "                continue\n",
+    "            col_letter = col_cells[0].column_letter\n",
+    "            ws.column_dimensions[col_letter].width = 25\n",
+    "\n",
+    "        # add autofilter for used range and freeze header row\n",
+    "        max_col = ws.max_column\n",
+    "        max_row = ws.max_row\n",
+    "        if max_col >= 1 and max_row >= 1:\n",
+    "            last_col_letter = ws.cell(row=1, column=max_col).column_letter\n",
+    "            ws.auto_filter.ref = f\"A1:{last_col_letter}{max_row}\"\n",
+    "            ws.freeze_panes = \"A2\"\n",
+    "\n",
+    "    # 5) save\n",
+    "    wb.save(output_file)\n",
+    "    wb.close()\n",
+    "    return output_file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "892604a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f07f72",
+   "id": "d6652ade",
    "metadata": {},
    "outputs": [],
    "source": [
