--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31e1b595",
+   "id": "65b44ac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "import tkinter as tk\n",
+    "from tkinter import filedialog\n",
+    "import shutil\n",
+    "\n",
+    "# Get the selected Excel file path\n",
+    "root = tk.Tk()\n",
+    "root.withdraw()\n",
+    "\n",
+    "file_path = filedialog.askopenfilename(title=\"Select Excel File\", filetypes=[(\"Excel Files\", \"*.xlsx *.xls\")])\n",
+    "\n",
+    "# Create a copy of the Excel file\n",
+    "file_name = os.path.basename(file_path)\n",
+    "file_name_without_ext = os.path.splitext(file_name)[0]\n",
+    "output_file_name = f\"{file_name_without_ext}_output.xlsx\"\n",
+    "output_file_path = os.path.join(\"Output\", output_file_name)\n",
+    "\n",
+    "output_folder = \"Output\"\n",
+    "if not os.path.exists(output_folder):\n",
+    "    os.makedirs(output_folder)\n",
+    "\n",
+    "shutil.copyfile(file_path, output_file_path)\n",
+    "\n",
+    "# Process sheets and write to Excel file\n",
+    "dfs = {\n",
+    "    \"Sheet1\": pd.DataFrame(...),\n",
+    "    \"Sheet2\": pd.DataFrame(...),\n",
+    "}\n",
+    "\n",
+    "with pd.ExcelWriter(output_file_path, mode=\"a\", if_sheet_exists=\"replace\") as writer:\n",
+    "    for sheet_name, df in dfs.items():\n",
+    "        df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "648dc9ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "892604a2",
+   "id": "0a1f558b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6652ade",
+   "id": "bef7e464",
    "metadata": {},
    "outputs": [],
    "source": [
