--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65b44ac6",
+   "id": "7834eaf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import win32com.client as win32\n",
+    "\n",
+    "def save_dfs_to_xlsb(input_file, dfs_to_update, output_file=None):\n",
+    "    \"\"\"\n",
+    "    Replace/add multiple sheets in an .xlsb workbook.\n",
+    "    dfs_to_update = { \"SheetName1\": df1, \"SheetName2\": df2 }\n",
+    "    \"\"\"\n",
+    "    excel = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
+    "    excel.Visible = False\n",
+    "\n",
+    "    # Open input file\n",
+    "    wb = excel.Workbooks.Open(input_file)\n",
+    "\n",
+    "    for sheet_name, df in dfs_to_update.items():\n",
+    "        # Delete old sheet if exists\n",
+    "        try:\n",
+    "            wb.Sheets(sheet_name).Delete()\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "\n",
+    "        # Add new sheet\n",
+    "        ws = wb.Sheets.Add()\n",
+    "        ws.Name = sheet_name\n",
+    "\n",
+    "        # Write header\n",
+    "        for i, col in enumerate(df.columns, start=1):\n",
+    "            ws.Cells(1, i).Value = col\n",
+    "\n",
+    "        # Write data\n",
+    "        for r in range(len(df)):\n",
+    "            for c in range(len(df.columns)):\n",
+    "                ws.Cells(r+2, c+1).Value = df.iat[r, c]\n",
+    "\n",
+    "    # Save as (new copy or overwrite)\n",
+    "    if not output_file:\n",
+    "        output_file = input_file\n",
+    "    wb.SaveAs(output_file, FileFormat=50)  # 50 = xlsb\n",
+    "    wb.Close(SaveChanges=True)\n",
+    "    excel.Quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21cef4ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "648dc9ce",
+   "id": "2728ea29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a1f558b",
+   "id": "98a2ced4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bef7e464",
+   "id": "2bb85ce0",
    "metadata": {},
    "outputs": [],
    "source": [
