--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,102 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7834eaf9",
+   "id": "da053202",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "import pandas as pd\n",
+    "from tkinter import Tk, filedialog\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import Font, PatternFill\n",
+    "import win32com.client as win32\n",
+    "\n",
+    "def update_excel_with_xlsb(dfs_to_update, output_folder=\"Output\"):\n",
+    "    \"\"\"\n",
+    "    1. Ask user to select an input Excel file (.xlsb).\n",
+    "    2. Copy the file to Output folder with '_output' added.\n",
+    "    3. Replace/add sheets with given DataFrames.\n",
+    "    4. Save final file as .xlsb via Excel COM (to keep size small).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # === Step 1: Ask user for input file ===\n",
+    "    Tk().withdraw()  # hide main Tk window\n",
+    "    input_file = filedialog.askopenfilename(\n",
+    "        title=\"Select Input XLSB File\",\n",
+    "        filetypes=[(\"Excel Binary Workbook\", \"*.xlsb\")]\n",
+    "    )\n",
+    "    if not input_file:\n",
+    "        print(\"❌ No file selected.\")\n",
+    "        return\n",
+    "\n",
+    "    # === Step 2: Prepare output path ===\n",
+    "    os.makedirs(output_folder, exist_ok=True)\n",
+    "    base_name = os.path.basename(input_file)\n",
+    "    name, ext = os.path.splitext(base_name)\n",
+    "    temp_xlsx = os.path.join(output_folder, f\"{name}_temp.xlsx\")   # work in .xlsx\n",
+    "    output_xlsb = os.path.join(output_folder, f\"{name}_output.xlsb\")\n",
+    "\n",
+    "    # === Step 3: Copy input file to temp .xlsx ===\n",
+    "    # We must convert to .xlsx because pandas/openpyxl cannot write .xlsb\n",
+    "    print(\"📂 Reading input .xlsb ...\")\n",
+    "    with pd.ExcelFile(input_file, engine=\"pyxlsb\") as xls:\n",
+    "        sheet_names = xls.sheet_names\n",
+    "        with pd.ExcelWriter(temp_xlsx, engine=\"openpyxl\") as writer:\n",
+    "            for sheet in sheet_names:\n",
+    "                df = pd.read_excel(xls, sheet_name=sheet, engine=\"pyxlsb\")\n",
+    "                df.to_excel(writer, sheet_name=sheet, index=False)\n",
+    "\n",
+    "    # === Step 4: Update/replace sheets ===\n",
+    "    with pd.ExcelWriter(temp_xlsx, engine=\"openpyxl\", mode=\"a\", if_sheet_exists=\"replace\") as writer:\n",
+    "        for sheet_name, df in dfs_to_update.items():\n",
+    "            df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "\n",
+    "    # === Step 5: Apply formatting ===\n",
+    "    book = load_workbook(temp_xlsx)\n",
+    "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
+    "    header_font = Font(bold=True)\n",
+    "    for sheet_name in dfs_to_update.keys():\n",
+    "        if sheet_name in book.sheetnames:\n",
+    "            ws = book[sheet_name]\n",
+    "            for cell in ws[1]:\n",
+    "                cell.font = header_font\n",
+    "                cell.fill = header_fill\n",
+    "            for col in ws.columns:\n",
+    "                col_letter = col[0].column_letter\n",
+    "                ws.column_dimensions[col_letter].width = 25\n",
+    "            ws.auto_filter.ref = ws.dimensions\n",
+    "    book.save(temp_xlsx)\n",
+    "\n",
+    "    # === Step 6: Use Excel COM to save as .xlsb ===\n",
+    "    print(\"💾 Converting to .xlsb ...\")\n",
+    "    excel = win32.gencache.EnsureDispatch(\"Excel.Application\")\n",
+    "    excel.Visible = False\n",
+    "    wb = excel.Workbooks.Open(os.path.abspath(temp_xlsx))\n",
+    "    wb.SaveAs(os.path.abspath(output_xlsb), FileFormat=50)  # 50 = xlsb\n",
+    "    wb.Close(SaveChanges=True)\n",
+    "    excel.Quit()\n",
+    "\n",
+    "    # Cleanup temp file\n",
+    "    os.remove(temp_xlsx)\n",
+    "\n",
+    "    print(f\"✅ Done! Saved to: {output_xlsb}\")\n",
+    "\n",
+    "\n",
+    "# === Example usage ===\n",
+    "if __name__ == \"__main__\":\n",
+    "    dfs_to_update = {\n",
+    "        \"UpdatedSheet1\": pd.DataFrame({\"A\": [1, 2], \"B\": [3, 4]}),\n",
+    "        \"NewReport\": pd.DataFrame({\"X\": [\"hello\", \"world\"]})\n",
+    "    }\n",
+    "    update_excel_with_xlsb(dfs_to_update)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d305416",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21cef4ab",
+   "id": "f97683f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2728ea29",
+   "id": "f05e5656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98a2ced4",
+   "id": "7c04e31e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb85ce0",
+   "id": "bd496059",
    "metadata": {},
    "outputs": [],
    "source": [
