--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da053202",
+   "id": "fe9e1abe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Step 5: Apply formatting to ALL sheets ===\n",
+    "book = load_workbook(temp_xlsx)\n",
+    "header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")\n",
+    "header_font = Font(bold=True)\n",
+    "\n",
+    "for sheet_name in book.sheetnames:   # 🔹 loop over ALL sheets\n",
+    "    ws = book[sheet_name]\n",
+    "\n",
+    "    # Apply header formatting\n",
+    "    for cell in ws[1]:\n",
+    "        cell.font = header_font\n",
+    "        cell.fill = header_fill\n",
+    "\n",
+    "    # Set column width = 25\n",
+    "    for col in ws.columns:\n",
+    "        col_letter = col[0].column_letter\n",
+    "        ws.column_dimensions[col_letter].width = 25\n",
+    "\n",
+    "    # Add autofilter\n",
+    "    ws.auto_filter.ref = ws.dimensions\n",
+    "\n",
+    "book.save(temp_xlsx)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5583074b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d305416",
+   "id": "eb9243e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f97683f7",
+   "id": "7f92625a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f05e5656",
+   "id": "6c1904f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c04e31e",
+   "id": "95399ee7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd496059",
+   "id": "bd74d5ba",
    "metadata": {},
    "outputs": [],
    "source": [
