--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,75 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe9e1abe",
+   "id": "2a1cb315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "from tkinter import filedialog, ttk\n",
+    "\n",
+    "def browse_file1():\n",
+    "    file_path = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xlsb *.xls\")])\n",
+    "    if file_path:\n",
+    "        entry_file1.delete(0, tk.END)\n",
+    "        entry_file1.insert(0, file_path)\n",
+    "\n",
+    "def browse_file2():\n",
+    "    file_path = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xlsb *.xls\")])\n",
+    "    if file_path:\n",
+    "        entry_file2.delete(0, tk.END)\n",
+    "        entry_file2.insert(0, file_path)\n",
+    "\n",
+    "def submit():\n",
+    "    file1 = entry_file1.get()\n",
+    "    file2 = entry_file2.get()\n",
+    "    year = year_var.get()\n",
+    "    month = month_var.get()\n",
+    "    print(f\"File 1: {file1}\")\n",
+    "    print(f\"File 2: {file2}\")\n",
+    "    print(f\"Year: {year}, Month: {month}\")\n",
+    "    root.destroy()\n",
+    "\n",
+    "# Create main window\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Master Input Window\")\n",
+    "\n",
+    "# File 1\n",
+    "tk.Label(root, text=\"Select First Excel File:\").grid(row=0, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "entry_file1 = tk.Entry(root, width=50)\n",
+    "entry_file1.grid(row=0, column=1, padx=5, pady=5)\n",
+    "tk.Button(root, text=\"Browse\", command=browse_file1).grid(row=0, column=2, padx=5, pady=5)\n",
+    "\n",
+    "# File 2\n",
+    "tk.Label(root, text=\"Select Second Excel File:\").grid(row=1, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "entry_file2 = tk.Entry(root, width=50)\n",
+    "entry_file2.grid(row=1, column=1, padx=5, pady=5)\n",
+    "tk.Button(root, text=\"Browse\", command=browse_file2).grid(row=1, column=2, padx=5, pady=5)\n",
+    "\n",
+    "# Year dropdown\n",
+    "tk.Label(root, text=\"Select Year:\").grid(row=2, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "year_var = tk.StringVar()\n",
+    "year_dropdown = ttk.Combobox(root, textvariable=year_var, values=[str(y) for y in range(2020, 2031)])\n",
+    "year_dropdown.grid(row=2, column=1, padx=5, pady=5)\n",
+    "year_dropdown.current(0)  # default to first value\n",
+    "\n",
+    "# Month dropdown\n",
+    "tk.Label(root, text=\"Select Month:\").grid(row=3, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "month_var = tk.StringVar()\n",
+    "month_dropdown = ttk.Combobox(root, textvariable=month_var, values=[str(m) for m in range(1, 13)])\n",
+    "month_dropdown.grid(row=3, column=1, padx=5, pady=5)\n",
+    "month_dropdown.current(0)\n",
+    "\n",
+    "# Submit button\n",
+    "tk.Button(root, text=\"Submit\", command=submit).grid(row=4, column=1, pady=10)\n",
+    "\n",
+    "root.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "258018eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5583074b",
+   "id": "d3d87a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9243e5",
+   "id": "90646594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f92625a",
+   "id": "137ea01c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1904f9",
+   "id": "67e26b13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95399ee7",
+   "id": "24825269",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd74d5ba",
+   "id": "f2d72cf1",
    "metadata": {},
    "outputs": [],
    "source": [
