--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,75 +3,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a1cb315",
+   "id": "f88b0729",
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import filedialog, ttk\n",
     "\n",
-    "def browse_file1():\n",
-    "    file_path = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xlsb *.xls\")])\n",
-    "    if file_path:\n",
-    "        entry_file1.delete(0, tk.END)\n",
-    "        entry_file1.insert(0, file_path)\n",
+    "def master_input_window():\n",
+    "    result = {}\n",
     "\n",
-    "def browse_file2():\n",
-    "    file_path = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xlsb *.xls\")])\n",
-    "    if file_path:\n",
-    "        entry_file2.delete(0, tk.END)\n",
-    "        entry_file2.insert(0, file_path)\n",
+    "    def browse_file(entry_widget):\n",
+    "        file_path = filedialog.askopenfilename(filetypes=[(\"Excel files\", \"*.xlsx *.xlsb *.xls\")])\n",
+    "        if file_path:\n",
+    "            entry_widget.delete(0, tk.END)\n",
+    "            entry_widget.insert(0, file_path)\n",
     "\n",
-    "def submit():\n",
-    "    file1 = entry_file1.get()\n",
-    "    file2 = entry_file2.get()\n",
-    "    year = year_var.get()\n",
-    "    month = month_var.get()\n",
-    "    print(f\"File 1: {file1}\")\n",
-    "    print(f\"File 2: {file2}\")\n",
-    "    print(f\"Year: {year}, Month: {month}\")\n",
-    "    root.destroy()\n",
+    "    def submit():\n",
+    "        result[\"file1\"] = entry_file1.get()\n",
+    "        result[\"file2\"] = entry_file2.get()\n",
+    "        result[\"file3\"] = entry_file3.get()\n",
+    "        result[\"year\"] = year_var.get()\n",
+    "        result[\"month\"] = month_var.get()\n",
+    "        root.destroy()\n",
     "\n",
-    "# Create main window\n",
-    "root = tk.Tk()\n",
-    "root.title(\"Master Input Window\")\n",
+    "    root = tk.Tk()\n",
+    "    root.title(\"Master Input Window\")\n",
     "\n",
-    "# File 1\n",
-    "tk.Label(root, text=\"Select First Excel File:\").grid(row=0, column=0, padx=5, pady=5, sticky=\"e\")\n",
-    "entry_file1 = tk.Entry(root, width=50)\n",
-    "entry_file1.grid(row=0, column=1, padx=5, pady=5)\n",
-    "tk.Button(root, text=\"Browse\", command=browse_file1).grid(row=0, column=2, padx=5, pady=5)\n",
+    "    # File 1\n",
+    "    tk.Label(root, text=\"Select First Excel File:\").grid(row=0, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "    entry_file1 = tk.Entry(root, width=50)\n",
+    "    entry_file1.grid(row=0, column=1, padx=5, pady=5)\n",
+    "    tk.Button(root, text=\"Browse\", command=lambda: browse_file(entry_file1)).grid(row=0, column=2, padx=5, pady=5)\n",
     "\n",
-    "# File 2\n",
-    "tk.Label(root, text=\"Select Second Excel File:\").grid(row=1, column=0, padx=5, pady=5, sticky=\"e\")\n",
-    "entry_file2 = tk.Entry(root, width=50)\n",
-    "entry_file2.grid(row=1, column=1, padx=5, pady=5)\n",
-    "tk.Button(root, text=\"Browse\", command=browse_file2).grid(row=1, column=2, padx=5, pady=5)\n",
+    "    # File 2\n",
+    "    tk.Label(root, text=\"Select Second Excel File:\").grid(row=1, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "    entry_file2 = tk.Entry(root, width=50)\n",
+    "    entry_file2.grid(row=1, column=1, padx=5, pady=5)\n",
+    "    tk.Button(root, text=\"Browse\", command=lambda: browse_file(entry_file2)).grid(row=1, column=2, padx=5, pady=5)\n",
     "\n",
-    "# Year dropdown\n",
-    "tk.Label(root, text=\"Select Year:\").grid(row=2, column=0, padx=5, pady=5, sticky=\"e\")\n",
-    "year_var = tk.StringVar()\n",
-    "year_dropdown = ttk.Combobox(root, textvariable=year_var, values=[str(y) for y in range(2020, 2031)])\n",
-    "year_dropdown.grid(row=2, column=1, padx=5, pady=5)\n",
-    "year_dropdown.current(0)  # default to first value\n",
+    "    # File 3\n",
+    "    tk.Label(root, text=\"Select Third Excel File:\").grid(row=2, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "    entry_file3 = tk.Entry(root, width=50)\n",
+    "    entry_file3.grid(row=2, column=1, padx=5, pady=5)\n",
+    "    tk.Button(root, text=\"Browse\", command=lambda: browse_file(entry_file3)).grid(row=2, column=2, padx=5, pady=5)\n",
     "\n",
-    "# Month dropdown\n",
-    "tk.Label(root, text=\"Select Month:\").grid(row=3, column=0, padx=5, pady=5, sticky=\"e\")\n",
-    "month_var = tk.StringVar()\n",
-    "month_dropdown = ttk.Combobox(root, textvariable=month_var, values=[str(m) for m in range(1, 13)])\n",
-    "month_dropdown.grid(row=3, column=1, padx=5, pady=5)\n",
-    "month_dropdown.current(0)\n",
+    "    # Year dropdown\n",
+    "    tk.Label(root, text=\"Select Year:\").grid(row=3, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "    year_var = tk.StringVar()\n",
+    "    year_dropdown = ttk.Combobox(root, textvariable=year_var, values=[str(y) for y in range(2020, 2031)])\n",
+    "    year_dropdown.grid(row=3, column=1, padx=5, pady=5)\n",
+    "    year_dropdown.current(0)\n",
     "\n",
-    "# Submit button\n",
-    "tk.Button(root, text=\"Submit\", command=submit).grid(row=4, column=1, pady=10)\n",
+    "    # Month dropdown\n",
+    "    tk.Label(root, text=\"Select Month:\").grid(row=4, column=0, padx=5, pady=5, sticky=\"e\")\n",
+    "    month_var = tk.StringVar()\n",
+    "    month_dropdown = ttk.Combobox(root, textvariable=month_var, values=[str(m) for m in range(1, 13)])\n",
+    "    month_dropdown.grid(row=4, column=1, padx=5, pady=5)\n",
+    "    month_dropdown.current(0)\n",
     "\n",
-    "root.mainloop()\n"
+    "    # Submit button\n",
+    "    tk.Button(root, text=\"Submit\", command=submit).grid(row=5, column=1, pady=10)\n",
+    "\n",
+    "    root.mainloop()\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "# Example usage:\n",
+    "user_inputs = master_input_window()\n",
+    "print(\"Returned values:\", user_inputs)\n",
+    "\n",
+    "file1 = user_inputs[\"file1\"]\n",
+    "file2 = user_inputs[\"file2\"]\n",
+    "file3 = user_inputs[\"file3\"]\n",
+    "year = user_inputs[\"year\"]\n",
+    "month = user_inputs[\"month\"]\n",
+    "\n",
+    "print(f\"\\nFile1: {file1}\\nFile2: {file2}\\nFile3: {file3}\\nYear: {year}\\nMonth: {month}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "258018eb",
+   "id": "e0d2cf86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d87a1a",
+   "id": "1b01b907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90646594",
+   "id": "5adbcd20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137ea01c",
+   "id": "fee2f6f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e26b13",
+   "id": "3e86d51e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24825269",
+   "id": "f578f8a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2d72cf1",
+   "id": "cdd511d4",
    "metadata": {},
    "outputs": [],
    "source": [
