--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,6 +3,118 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0d82c36d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# ========================\n",
+    "# Constants\n",
+    "# ========================\n",
+    "EMP_ID_COL = \"Employee ID\"\n",
+    "EMP_NAME_COL = \"Employee Name\"\n",
+    "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
+    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "MGR_GCB_COL = \"Manager Global Career Band\"   # <-- new column\n",
+    "MONTHLY_FILE = \"monthly.csv\"\n",
+    "GHA_FILE = \"gha.csv\"\n",
+    "\n",
+    "# ========================\n",
+    "# Phase 1: Enrich monthly file with GHA data\n",
+    "# ========================\n",
+    "def phase1_enrich(monthly_file, gha_file, output_file=\"phase1_enriched.xlsx\"):\n",
+    "    # Load files\n",
+    "    df_monthly = pd.read_csv(monthly_file, encoding=\"ISO-8859-1\")\n",
+    "    df_gha = pd.read_csv(gha_file, encoding=\"ISO-8859-1\")\n",
+    "    \n",
+    "    # Merge employee details\n",
+    "    df = df_monthly.merge(\n",
+    "        df_gha[[EMP_ID_COL, GCB_COL, \"Department\", \"Legal Entity Name\"]], \n",
+    "        on=EMP_ID_COL, how=\"left\"\n",
+    "    )\n",
+    "    \n",
+    "    # Merge manager GCB details\n",
+    "    df = df.merge(\n",
+    "        df_gha[[EMP_ID_COL, GCB_COL]].rename(\n",
+    "            columns={EMP_ID_COL: MGR_ID_COL, GCB_COL: MGR_GCB_COL}\n",
+    "        ),\n",
+    "        on=MGR_ID_COL, how=\"left\"\n",
+    "    )\n",
+    "    \n",
+    "    # Save Phase 1 output\n",
+    "    df.to_excel(output_file, index=False)\n",
+    "    print(f\"✅ Phase 1 complete → saved to {output_file}\")\n",
+    "\n",
+    "\n",
+    "# ========================\n",
+    "# Phase 2: Flatten Hierarchy\n",
+    "# ========================\n",
+    "def phase2_flatten(input_file=\"phase1_enriched.xlsx\", output_file=\"final_hierarchy.xlsx\"):\n",
+    "    df = pd.read_excel(input_file)\n",
+    "    \n",
+    "    hierarchy_rows = []\n",
+    "    missing_mgrs = []\n",
+    "    \n",
+    "    # Find top manager (MD)\n",
+    "    top_manager = df[df[GCB_COL] == \"MD\"][EMP_NAME_COL].unique()\n",
+    "    \n",
+    "    for _, emp in df.iterrows():\n",
+    "        # Skip top manager (MD himself)\n",
+    "        if emp[GCB_COL] == \"MD\":\n",
+    "            continue\n",
+    "        \n",
+    "        # If manager missing → push to missing manager sheet\n",
+    "        if pd.isna(emp[MGR_ID_COL]) or emp[MGR_ID_COL] not in df[EMP_ID_COL].values:\n",
+    "            missing_mgrs.append(emp.to_dict())\n",
+    "            continue\n",
+    "        \n",
+    "        # Build hierarchy row\n",
+    "        row = {\n",
+    "            \"MD Name\": top_manager[0] if len(top_manager) > 0 else None,\n",
+    "            \"GCB3/Manager Name\": emp[MGR_NAME_COL],\n",
+    "            \"Manager GCB\": emp[MGR_GCB_COL],\n",
+    "            \"Employee ID\": emp[EMP_ID_COL],\n",
+    "            \"Employee Name\": emp[EMP_NAME_COL],\n",
+    "            \"Employee GCB\": emp[GCB_COL],\n",
+    "            \"Department\": emp.get(\"Department\"),\n",
+    "            \"Legal Entity\": emp.get(\"Legal Entity Name\"),\n",
+    "        }\n",
+    "        hierarchy_rows.append(row)\n",
+    "    \n",
+    "    # Convert to DataFrames\n",
+    "    df_hierarchy = pd.DataFrame(hierarchy_rows)\n",
+    "    df_missing = pd.DataFrame(missing_mgrs)\n",
+    "    \n",
+    "    # Sorting\n",
+    "    if not df_hierarchy.empty:\n",
+    "        df_hierarchy = df_hierarchy.sort_values(\n",
+    "            by=[\"MD Name\", \"GCB3/Manager Name\", \"Employee Name\"]\n",
+    "        )\n",
+    "    \n",
+    "    # Save to Excel\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        df_hierarchy.to_excel(writer, sheet_name=\"Hierarchy\", index=False)\n",
+    "        df_missing.to_excel(writer, sheet_name=\"Missing Managers\", index=False)\n",
+    "    \n",
+    "    print(f\"✅ Phase 2 complete → saved to {output_file}\")\n",
+    "\n",
+    "\n",
+    "# ========================\n",
+    "# Run Both Phases\n",
+    "# ========================\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Phase 1\n",
+    "    phase1_enrich(MONTHLY_FILE, GHA_FILE, \"phase1_enriched.xlsx\")\n",
+    "    \n",
+    "    # Phase 2\n",
+    "    phase2_flatten(\"phase1_enriched.xlsx\", \"final_hierarchy.xlsx\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7f379a34",
    "metadata": {},
    "outputs": [],
