--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d82c36d",
+   "id": "9ac6fa8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,13 +29,21 @@
     "    df_monthly = pd.read_csv(monthly_file, encoding=\"ISO-8859-1\")\n",
     "    df_gha = pd.read_csv(gha_file, encoding=\"ISO-8859-1\")\n",
     "    \n",
-    "    # Merge employee details\n",
+    "    # --- Step 1: Merge employee details (Employee ID → add GCB etc.)\n",
     "    df = df_monthly.merge(\n",
-    "        df_gha[[EMP_ID_COL, GCB_COL, \"Department\", \"Legal Entity Name\"]], \n",
+    "        df_gha[[EMP_ID_COL, GCB_COL, \"Department\", \"Legal Entity Name\"]],\n",
     "        on=EMP_ID_COL, how=\"left\"\n",
     "    )\n",
     "    \n",
-    "    # Merge manager GCB details\n",
+    "    # --- Step 2: Add Manager Employee ID by matching Manager Name\n",
+    "    df = df.merge(\n",
+    "        df_gha[[EMP_ID_COL, EMP_NAME_COL]].rename(\n",
+    "            columns={EMP_ID_COL: MGR_ID_COL, EMP_NAME_COL: MGR_NAME_COL + \"_GHA\"}\n",
+    "        ),\n",
+    "        left_on=MGR_NAME_COL, right_on=MGR_NAME_COL + \"_GHA\", how=\"left\"\n",
+    "    )\n",
+    "    \n",
+    "    # --- Step 3: Add Manager GCB\n",
     "    df = df.merge(\n",
     "        df_gha[[EMP_ID_COL, GCB_COL]].rename(\n",
     "            columns={EMP_ID_COL: MGR_ID_COL, GCB_COL: MGR_GCB_COL}\n",
@@ -46,7 +54,6 @@
     "    # Save Phase 1 output\n",
     "    df.to_excel(output_file, index=False)\n",
     "    print(f\"✅ Phase 1 complete → saved to {output_file}\")\n",
-    "\n",
     "\n",
     "# ========================\n",
     "# Phase 2: Flatten Hierarchy\n",
